--- a/CBAWeb/CBAWeb.csproj
+++ b/CBAWeb/CBAWeb.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="DotNetify.SignalR" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Azure.DocumentDB" Version="2.1.3" />
     <PackageReference Include="System.Reactive" Version="3.1.1" />
     <PackageReference Include="AspNet.Security.OpenIdConnect.Server" Version="2.0.0-rc1-final" />    
   </ItemGroup>
